# apillon-simplet-blueprint-template

./: Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs
src/simplets/: email_airdrop.rs  mod.rs  proof_of_attendance.rs
