[package]
name = "apillon-simplet-blueprint-template"
version = "0.1.0"
edition = "2021"
description = "A Tangle Blueprint template for running apillon simplet services"
authors = ["Drew Stone <drewstone329@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/apillon-simplet-blueprint-template"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
tracing = "0.1"
async-trait = "0.1"
color-eyre = "0.6"
structopt = "0.3.26"
tokio = { version = "^1", default-features = false, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter"] }

[features]
default = ["std"]
std = ["gadget-sdk/std"]

[dependencies.gadget-sdk]
version = "0.3.0"
default-features = false
features = ["getrandom"]

[build-dependencies]
blueprint-metadata = "0.1.6"

[lib]
path = "src/lib.rs"

[[bin]]
name = "apillon-simplet-blueprint-template"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { Evm = "HelloBlueprint" }

[[package.metadata.gadget.Native.sources]]
owner = "tangle-network"
repo = "apillon-simplet-blueprint-template"
tag = "0.1.0"
binaries = [
    { arch = "Amd64", os = "Linux", name = "amd64-linux-apillon-simplet-blueprint-template-gadget" },
    { arch = "Arm64", os = "Linux", name = "arm64-linux-apillon-simplet-blueprint-template-gadget" },
]
